--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -22,7 +22,7 @@ jobs:
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
       - name: Deploy
-      - uses: azure/arm-deploy@v1
+        uses: azure/arm-deploy@v1
         with:
           subscriptionId: ${{secrets.AZURE_SUBSCRIPTION}}
           resourceGroupName: ${{secrets.AZURE_RG}}
