--- a/.github/workflows/deploy-appservice.yml
+++ b/.github/workflows/deploy-appservice.yml
@@ -26,5 +26,6 @@ jobs:
           subscriptionId: ${{secrets.AZURE_SUBSCRIPTION}}
           resourceGroupName: ${{secrets.AZURE_RG}}
           template: ./infra/main.bicep
+          parameters: 'storageSKU:Standard_LRS'
           failOnStdErr: false
  
