--- a/.github/workflows/deploy-appservice-front.yml
+++ b/.github/workflows/deploy-appservice-front.yml
@@ -16,9 +16,9 @@ jobs:
           submodules: true
 #Set up node
       - name: Node Setup 
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2
         with: 
-          node-version: '10.x'
+          node-version: '14.x'
       - name: 'npm install, build and test'
         run: |
           npm install
@@ -26,6 +26,19 @@ jobs:
           npm run build --if-present
           npm run test --if-present
         working-directory: ./src/frontend
+#Upload artifacts
+      - name: 'Upload artifact for deployment job'
+        uses: actions/upload-artifact@v2
+        with:
+          name: node-app
+          path: ./src/frontend/build
+          if-no-files-found: error
+          retention-days: 5
+#Download artifacts
+      - name: Download build artifacts
+        uses: actions/download-artifact@v2
+        with:
+          name: node-app
 #Deploy
       - name: Deploy Frontend to Azure WebApp
         uses: azure/webapps-deploy@v1
