--- a/src/frontend/public/web.config
+++ b/src/frontend/public/web.config
@@ -1,21 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <configuration>
-    <system.webServer>
-        <rewrite>
-            <rules>
-                <rule name="React Routes" stopProcessing="true">
-                    <match url=".*" />
-                    <conditions logicalGrouping="MatchAll">
-                        <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
-                        <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
-                        <add input="{REQUEST_URI}" pattern="^/(api)" negate="true" />
-                    </conditions>
-                    <action type="Rewrite" url="/" />
-                </rule>
-            </rules>
-        </rewrite>
-        <staticContent>
-            <mimeMap fileExtension=".json" mimeType="application/json" />
-        </staticContent>
-    </system.webServer>
+  <system.webServer>
+    <handlers>
+      <add name="iisnode" path="app.js" verb="*" modules="iisnode" />
+    </handlers>
+        <defaultDocument enabled="true">
+            <files>
+                <add value="app.js" />
+            </files>
+        </defaultDocument>
+  </system.webServer>
 </configuration>
