--- a/src/frontend/web.config
+++ b/src/frontend/web.config
@@ -2,12 +2,16 @@
 <configuration>
   <system.webServer>
     <handlers>
-      <add name="iisnode" path="app.js" verb="*" modules="iisnode" />
+      <add name="iisnode" path="index.tsx" verb="*" modules="iisnode" />
     </handlers>
         <defaultDocument enabled="true">
             <files>
-                <add value="app.js" />
+                <add value="index.tsx" />
             </files>
         </defaultDocument>
   </system.webServer>
 </configuration>
+
+    
+    <!-- the index.tsx file is a node.js application 
+    to be handled by the iisnode module -->
