--- a/.github/workflows/deploy-appservice-front.yml
+++ b/.github/workflows/deploy-appservice-front.yml
@@ -32,7 +32,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: ./src/frontend/build
+          path: ./src/frontend/build  
           if-no-files-found: error
           retention-days: 5
 #Download artifacts
@@ -46,5 +46,5 @@ jobs:
         with:
           app-name: 'hackerTruong588'
           publish-profile: ${{secrets.AZURE_PUBLISHPROFILE}}
-          package: ./src/frontend
+          package: ./node-app
  
