--- a/.github/workflows/deploy-appservice-front.yml
+++ b/.github/workflows/deploy-appservice-front.yml
@@ -31,20 +31,18 @@ jobs:
       - name: 'Upload artifact for deployment job'
         uses: actions/upload-artifact@v2
         with:
-          name: node-app
-          path: ./src/frontend/build  
+          name: FrontendApp
+          path: "./src/frontend/build"
           if-no-files-found: error
           retention-days: 5
 #Download artifacts
       - name: Download build artifacts
         uses: actions/download-artifact@v2
-        with:
-          name: node-app
 #Deploy
       - name: Deploy Frontend to Azure WebApp
         uses: azure/webapps-deploy@v2
         with:
           app-name: 'hackerTruong588'
           publish-profile: ${{secrets.AZURE_PUBLISHPROFILE}}
-          package: ./node-app
+          package: ./FrontendApp
  
