fix yml files, add api yml deploy

--- a/.github/workflows/deploy-appservice.yml
+++ b/.github/workflows/deploy-appservice.yml
@@ -27,4 +27,6 @@ jobs:
           resourceGroupName: ${{secrets.AZURE_RG}}
           template: ./infra/main.bicep
           failOnStdErr: false
- 
+      - name: logout 
+        run: |
+          az logout
