--- a/.github/workflows/deploy-appservice-api.yml
+++ b/.github/workflows/deploy-appservice-api.yml
@@ -1,4 +1,6 @@
 name: Deploy API 
+env: 
+  DOTNET_VERSION: "5.0"
 on:
   push:
     branches:
@@ -20,20 +22,20 @@ jobs:
       - name: Setup .NET Core 
         uses: actions/setup-dotnet@v3
         with: 
-          dotnet-version: '5.0.x'
+          dotnet-version: ${{ env.DOTNET_VERSION }}
       - name: 'dotnet build and publish'
         shell: bash
         run: |
           cd src/backend/api
           dotnet restore
           dotnet build --configuration Release
-          dotnet publish -c Release -o ./src/backend/api/bin/Release/net5.0
+          dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myAPI
 #Upload artifacts
       - name: 'Upload API artifact'
         uses: actions/upload-artifact@v2
         with:
           name: APIApp
-          path: "./src/backend/api/bin/Release/net5.0"
+          path:  ${{env.DOTNET_ROOT}}/myAPI
           if-no-files-found: error
           retention-days: 5
 #Download artifacts
