--- a/.github/workflows/deploy-appservice-api.yml
+++ b/.github/workflows/deploy-appservice-api.yml
@@ -23,19 +23,24 @@ jobs:
         uses: actions/setup-dotnet@v3
         with: 
           dotnet-version: ${{ env.DOTNET_VERSION }}
-      - name: 'dotnet build and publish'
+      - name: 'dotnet build'
         shell: bash
         run: |
           cd src/backend/api
           dotnet restore
           dotnet build --configuration Release
-          dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myAPI
+      - name: 'dotnet publish'
+        shell: bash
+        run: |
+          cd src/backend/api
+          dotnet publish -c Release -o ./src/backend/api/bin/Release/net5.0
+
 #Upload artifacts
       - name: 'Upload API artifact'
         uses: actions/upload-artifact@v2
         with:
           name: APIApp
-          path:  ${{env.DOTNET_ROOT}}/myAPI
+          path: "./src/backend/api/bin/Release/net5.0"
           if-no-files-found: error
           retention-days: 5
 #Download artifacts
