--- a/.github/workflows/deploy-appservice-api.yml
+++ b/.github/workflows/deploy-appservice-api.yml
@@ -21,16 +21,16 @@ jobs:
         uses: actions/setup-dotnet@v1
         with: 
           dotnet-version: ${{ env.DOTNET_VERSION }}
-      - name: 'dotnet build'
+      - name: 'dotnet build'  
         shell: bash
         run: |
-          cd src/backend/api
+          cd src/backend/api/
           dotnet restore
           dotnet build --configuration Release
       - name: 'dotnet publish'
         shell: bash
         run: |
-          cd src/backend/api
+          cd src/backend/api/
           dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myAPI
 
 #Upload artifacts
