--- a/.github/workflows/deploy-appservice-api.yml
+++ b/.github/workflows/deploy-appservice-api.yml
@@ -40,17 +40,22 @@ jobs:
           if-no-files-found: error
           retention-days: 30
 #Download artifacts
-      - name: Download build artifacts
-        uses: actions/download-artifact@v2
+  deployAPI: 
+    name: deploy
+    runs-on: ubuntu-latest
+    needs: buildAPI 
+    steps:
+    - name: Download build artifacts
+      uses: actions/download-artifact@v2
 #Log into azure
-      - uses: azure/login@v1
-        with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
+    - uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
 #Deploy
-      - name: Deploy API to Azure WebApp
-        uses: azure/webapps-deploy@v2
-        with:
-          app-name: 'hackerTruongAPI'
-          package: ./APIApp
+    - name: Deploy API to Azure WebApp
+      uses: azure/webapps-deploy@v2
+      with:
+        app-name: 'hackerTruongAPI'
+        package: ./APIApp
 
  
